@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 AC_INIT
 AC_CONFIG_SRCDIR([src/prtget.cpp])
-AM_INIT_AUTOMAKE(prt-get,0.5.12pre1)
+AM_INIT_AUTOMAKE(prt-get,0.5.12pre2)
 
 
 dnl Determine default prefix
